# SmartScheduler

./: .gitignore  README.md  app.py  calendar_integration.py  main.py  ml_prioritizer.py  models.py  nlp_processor.py  notification_service.py  pyproject.toml  requirements.txt  routes.py  task_scheduler.py
instance/: timemaster.db
static/css/: custom.css
static/js/: app.js  chart-utils.js
templates/: 404.html  500.html  assistant.html  create_task.html  dashboard.html  edit_task.html  index.html  layout.html  login.html  preferences.html  register.html  tasks.html  view_task.html
